--- a/.github/workflows/build-api.yml
+++ b/.github/workflows/build-api.yml
@@ -18,7 +18,9 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
+    - name: Where Am I?
+      run: ls
     - name: Restore dependencies
-      run: dotnet restore .\test-api\test-api.csproj
+      run: dotnet restore ./test-api/test-api.csproj
     - name: Build
-      run: dotnet build --no-restore .\test-api\test-api.csproj
+      run: dotnet build --no-restore ./test-api/test-api.csproj
