--- a/.github/workflows/build-api.yml
+++ b/.github/workflows/build-api.yml
@@ -26,9 +26,9 @@ jobs:
     - name: Build
       run: dotnet build --no-restore ./test-api/test-api.csproj
 
-    call-workflow-passing-data:
-      uses: octo-org/example-repo/.github/workflows/workflow-B.yml@main
+  call-workflow-passing-data:
+    uses: koniin/github-actions/.github/workflows/workflow-B.yml@main
       with:
-        username: mona
+        message: Hank the tank
       secrets:
         token: ${{ secrets.BOGUS_TOKEN }}
