--- a/.github/workflows/build-api.yml
+++ b/.github/workflows/build-api.yml
@@ -27,7 +27,7 @@ jobs:
       run: dotnet build --no-restore ./test-api/test-api.csproj
 
   call-workflow-passing-data:
-    uses: koniin/github-actions/.github/workflows/workflow-B.yml@main
+    uses: koniin/github-actions/.github/workflows/workflow-B.yml
     with:
       message: Hank the tank
     secrets:
