--- a/.github/workflows/build-cli.yml
+++ b/.github/workflows/build-cli.yml
@@ -15,11 +15,22 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 5.0.x
-
+    - name: Add GitHub NuGet Source
+      run: |
+        dotnet nuget add source "https://nuget.pkg.github.com/koniin/index.json" \
+          -n github \
+          -u koniin \
+          -p ${{ secrets.GITHUB_TOKEN }} \
+          --store-password-in-clear-text
     - name: Restore dependencies
       run: dotnet restore ./cli-client/cli-client.csproj
     - name: Build
       run: dotnet build --no-restore ./cli-client/cli-client.csproj
+    - name: Cleanup nuget sources
+      if: always()
+      continue-on-error: true
+      run: |
+        dotnet nuget remove source github
 
   call-workflow-passing-data:
     needs: build
